--- a/views/this.html
+++ b/views/this.html
@@ -22,6 +22,7 @@
   <body>
     <span id='error'></span>    
     <div id='main'>
+          <div id="gheader" draggable="true"></div>  
       <div id='header'>
          <button id='cgbtn'>Create Gallery</button> 
          
@@ -76,8 +77,9 @@
       </div>
        
       <div id='pool'></div>
-            
+         
     </div>
+
     </div>  
     
     <div id='videoContainer'>
