--- a/views/this.html
+++ b/views/this.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <link rel='stylesheet' href='http://localhost:3000/public/css/gal.css'>   
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
+
+     <link rel="stylesheet" href="http://localhost:3000/public/css/perfect-scrollbar.css">
      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="  crossorigin=""/>
    
@@ -12,6 +13,7 @@
     <script type="text/javascript" src="http://localhost:3000/public/javascript/jquery-2.2.0.min.js"></script>    
     <script type="text/javascript" src="http://localhost:3000/public/javascript/editor.js"></script>
     <script type="text/javascript" src="http://localhost:3000/public/javascript/sortable.js"></script>
+    <script type="text/javascript" src="http://localhost:3000/public/javascript/perfect-scrollbar.min.js"></script>
      <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
