--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,9 @@
   <head> 
     <meta charset="utf-8">
     <style type="text/css">
-      
+      body {
+         font-family:Cantarell;      
+      }
     #a-login-container {
       position: relative;
       margin-left: auto;
@@ -332,6 +334,7 @@ window.onload = function(){
         input.style.paddingLeft = 0;
         input.style.boxSizing = 'border-box'        
         input.style.zIndex = 101;
+        input.style.outline = 'none';
         input.style.opacity = 0.5;
         let title = document.createElement('span');
         title.style.height = 20 + 'px';
@@ -373,7 +376,7 @@ window.onload = function(){
          if(action == 'login'){
             let username = document.getElementById('login-username').value;
             let password = document.getElementById('login-password').value;   
-            this._ajax({user : username, pass : password})      
+            this._ajax({user : username, pass : password,action:'login'})      
          }
          
          if(action == 'register'){
@@ -381,20 +384,25 @@ window.onload = function(){
             let password = document.getElementById('register-password').value;
             let email = document.getElementById('register-email').value;  
             
-            this._ajax({user: username, pass : password, mail : email},'/login/register');       
+            this._ajax({user: username, pass : password, mail : email,action:'register'},'/login/register');       
          }         
     },
     
     _ajax : function(obj,url){
        let content = new XMLHttpRequest();
-       content.open('POST',url)
+       content.open('POST','/')
        content.onreadystatechange = function(data){
          if(this.readyState == 4){
-         
+         window.location.reload()
+         //document.open();
+         //document.write(content.responseText);
+        //document.close();
+           
          }
        }
        
        content.setRequestHeader('Content-Type','application/json');
+       content.setRequestHeader('action',obj.action);
        content.send(JSON.stringify(obj))
     }
     
