--- a/public/css/gal.css
+++ b/public/css/gal.css
@@ -138,17 +138,19 @@ body {
     float: right;   
     position: relative;
     right: 2px;    
-    top:0;
+    top:3px;
 }
 
 .marrow {
   width : 30px;
-  height : 20px;  
+  height : 20px; 
+ 
 }
 
 .darrow {
   width : 40px;
   height : 22px;
+  top : 3px;
 }
 
 #arrow-up {
@@ -156,21 +158,33 @@ body {
     height: 10px;
     position: relative;   
     width: 10px;
+    cursor: pointer;
+    right: 5px;
 }
 
 .marup {
-  top : 5px;
+  
 }
 
 .darup {
- top : 5px;
+ 
 }
-
+#up--gal {
+  width : 15px;
+  height : 15px;
+}
 #arrow-down {
+	cursor:pointer;
+	text-align: center;
     float: right;
-    height: 10px;
+    height: 15px;
     position: relative;    
-    width: 10px;
+    width: 15px;
+    padding-bottom:3px;
+    color:blue;
+    vertical-align: middle;
+    line-height: 15px;
+    margin-left: 5px;
 }
 
 .up-down {
