--- a/public/css/gal.css
+++ b/public/css/gal.css
@@ -876,6 +876,14 @@ body {
 #i-header {
   background-color: lightblue;
 }
+
+.e-redbtn {
+   color : #ba0000;
+}
+.e-greenbtn{
+  color: green;
+}
+
 .i-menu {
   width : 180px;
   height: 25px;
@@ -1090,6 +1098,7 @@ box-sizing: border-box;
 
 .reorder-move {
   cursor:move;
+  margin-top:22px;
 }
 
 .edit-deleter{
@@ -1097,12 +1106,12 @@ box-sizing: border-box;
 }
 
 .reorder-pure{
-     width : 100px;
-    min-height:  0;
-    height : 40px;
-   margin-top : 20px;
-   overflow : hidden;
-font-size : 10px;
+  width : 100px;
+  min-height:  0;
+  height : 40px;
+  margin-top : 20px;
+  overflow : hidden;
+  font-size : 10px;
 }
 
 
@@ -1111,7 +1120,7 @@ font-size : 10px;
   position: relative;
 }
 #editor-archive {
- display:none;
+  display:none;
 }
 
 #archive-container {
@@ -1384,9 +1393,9 @@ box-sizing:border-box;
   color:blue;
 }
 .description{
-  color:lightblue;
+  color:gray;
   font-family: Cantarell;
-  font-size: 12px;
+  font-size: 14px;
 }
 .a-archive {
   position:relative;
