--- a/views/this.html
+++ b/views/this.html
@@ -138,47 +138,35 @@
     </div>
     
     <div id='showArticle'>
-    </div>
+    </div>   
     
-    
-          <div id='e-dialog'>
-        <div id='e-dialog-container'>
-          <div id='e-dialog-header'>
-            <img id='e-dialog-back' src="" alt="">
-            <button id='e-dialog-headerbtn'>Select Position</button>          
-          </div>
-          <div id='mapSelect'>
-          
-          </div>
-        </div>           
-      </div>
-      
-      
-      
-            
-       <div id='e-tags'>
-        <div id='e-tags-container'>
-          <div id='e-tags-header'>
-            <img id='e-tags-back' src="" alt="">
-            <button id='e-tags-headerbtn'>Add Tag</button>          
-          </div>
-          <div id='mytags'>
-             <div id='e-tags-current'></div>
-             <div id='e-tags-prev'>
-                <div id='e-tags-prevhead'>
-                   <div id='e-tags-mytags'>used tags</div>
-                   <div id='e-tags-trending'><span id='e-tags-trendspan'>trending</span></div>                
-                </div>
-             </div>
-          </div>
-        </div>           
-      </div>
-    
-
-
-
     <div id='home'></div>
      <script type="text/javascript">
+     var tgs = `<div id="e-tags-container">
+          <div id="e-tags-header"> 
+            <img id="e-tags-back" src="" alt="">  
+            <button id="e-tags-headerbtn">Add Tag</button>           
+          </div> 
+          <div id="mytags">
+             <div id="e-tags-current"></div>  
+             <div id="e-tags-prev"> 
+                <div id="e-tags-prevhead">
+                   <div id="e-tags-mytags">used tags</div>
+                <div id="e-tags-trending"><span id="e-tags-trendspan">trending</span></div>                 
+                </div> 
+            </div> 
+          </div> 
+       </div>`;
+      
+     var lck = `<div id="e-dialog-container"> 
+          <div id="e-dialog-header">
+           <img id="e-dialog-back" src="" alt=""> 
+             <button id="e-dialog-headerbtn">Select Position</button>           
+          </div> 
+          <div id="mapSelect">          
+          </div> 
+        </div>`;        
+        
      var socketId;
      var app;
      var username = '<%username%>';
