--- a/views/this.html
+++ b/views/this.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
   <head> 
     <meta charset="utf-8">
     
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel='stylesheet' href='http://<%host%>/public/css/gal.css'>   
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
